--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ body {
 }
 
 main {
-  width: 375px;
-  height: 812px;
-  background: url(images/Mobile.png);
+  width: 100vw;
+  height: 100vh;
+  background: url(images/Mobile.png) no-repeat center/cover;
 }
 
 .container {
